--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://via.placeholder.com/800x400?text=Graph+Traversal" alt="Optimization Algorithm Visual Preview" class="d-block w-100">
+            <img src="Opti.png" alt="Optimization Algorithm Visual Preview" class="d-block w-100">
             <div class="carousel-caption d-none d-md-block">
               <p>ptimization Algorithm Techniques</p>
             </div>
